--- a/config/compass.config
+++ b/config/compass.config
@@ -12,7 +12,7 @@ end
 
 # This is common configuration
 sass_dir = File.join 'views', 'stylesheets'
-images_dir = File.join 'static', 'images'
+images_dir = File.join 'public', 'images'
 http_path = "/"
 http_images_path = "/images"
 http_stylesheets_path = "/stylesheets"
