ignore tmp directory

--- a/config/compass.config
+++ b/config/compass.config
@@ -11,6 +11,7 @@ else
 end
 
 # This is common configuration
+css_dir = "/tmp/stylesheets"
 sass_dir = File.join 'views', 'stylesheets'
 images_dir = File.join 'public', 'images'
 http_path = "/"
