--- a/config/compass.config
+++ b/config/compass.config
@@ -4,7 +4,7 @@ if defined?(Sinatra)
   environment = :development
 else
   # this is the configuration to use when running within the compass command line tool.
-  css_dir = File.join 'static', 'stylesheets'
+  css_dir = File.join 'public', 'stylesheets'
   relative_assets = true
   environment = :production
   output_style = :compressed
