--- a/config/compass.config
+++ b/config/compass.config
@@ -4,10 +4,10 @@ if defined?(Sinatra)
   environment = :development
 else
   # this is the configuration to use when running within the compass command line tool.
-  css_dir = File.join 'public', 'stylesheets'
   relative_assets = true
   environment = :production
   output_style = :compressed
+  asset_cache_buster :none
 end
 
 # This is common configuration
