--- a/config/compass.config
+++ b/config/compass.config
@@ -2,6 +2,7 @@ if defined?(Sinatra)
   # This is the configuration to use when running within sinatra
   project_path = Sinatra::Application.root
   environment = :development
+  asset_cache_buster :none
 else
   # this is the configuration to use when running within the compass command line tool.
   relative_assets = true
